[gd_scene load_steps=2 format=3 uid="uid://ua771g6s23r6"]

[ext_resource type="Script" uid="uid://565w1cd32x72" path="res://main_menu.gd" id="1_06t4h"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 385.0
offset_top = 174.0
offset_right = -641.0
offset_bottom = -333.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.19, 2.71122)
script = ExtResource("1_06t4h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = -9.0
offset_right = 82.0
offset_bottom = 92.0
scale = Vector2(1.46694, 1.46457)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
