[gd_scene load_steps=6 format=3 uid="uid://bovexgfl1pwcl"]

[ext_resource type="Script" uid="uid://c7c53n6qoambq" path="res://scripts/main_menu.gd" id="1_kv8mn"]
[ext_resource type="Texture2D" uid="uid://dlblsgxfoknh2" path="res://Assets/main menuBG/main_screen.png" id="2_1sggn"]
[ext_resource type="Texture2D" uid="uid://dcl3f66vm5p36" path="res://Assets/menu_buttons/back.png" id="2_2iy26"]
[ext_resource type="Texture2D" uid="uid://umqagynsl4r0" path="res://Assets/menu_buttons/mute.png" id="2_kv8mn"]
[ext_resource type="Script" path="res://scenes/button.gd" id="2_yjkok"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 450.0
offset_right = -1026.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.275)
script = ExtResource("1_kv8mn")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(384, -98.8235)
scale = Vector2(0.4, 0.470588)
texture = ExtResource("2_1sggn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = -9.0
offset_right = 82.0
offset_bottom = 92.0
scale = Vector2(0.35, 0.35)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_kv8mn")
icon_alignment = 1

[node name="Back_Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_2iy26")
script = ExtResource("2_yjkok")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back_Button" to="." method="_on_back_button_pressed"]
